<resources>
    <string name="app_name">App Autentica Firebase</string>
    <string name="email">E-mail</string>
    <string name="senha">Senha</string>
    <string name="login">Login</string>
    <string name="cadastrar">Cadastrar</string>
    <string name="messageClick">Não tem uma conta? Crie uma!</string>
    <string name="msgUsuarioLogado">Logado com Sucesso!"</string>
    <string name="btnDeslogar">Deslogar</string>
</resources>